# AAI-501-Final-Team-Project-Group2

./: .gitignore  README.md  init.sh  lint.sh  main.py  pyproject.toml  start_jupyter.sh  strip_notebooks.sh
code/: 01.ipynb  03.ipynb
docs/: DEVELOPMENT.md
